[gd_scene load_steps=11 format=3 uid="uid://badtpfq4swfwd"]

[ext_resource type="Script" path="res://scripts/menus/play_menu.gd" id="1_2fhuk"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1_nqmi5"]
[ext_resource type="Texture2D" uid="uid://bye5sr6feh6hn" path="res://assets/main_menu.png" id="2_nfxcj"]
[ext_resource type="Script" path="res://scripts/menus/start_menu.gd" id="2_ufbnd"]
[ext_resource type="Script" path="res://scripts/win.gd" id="2_v2wv1"]
[ext_resource type="Script" path="res://scripts/menus/scoreboard.gd" id="3_l42sp"]
[ext_resource type="Texture2D" uid="uid://crt4c3wo1mela" path="res://assets/title_screen_buttons.png" id="4_u5p1v"]
[ext_resource type="FontFile" uid="uid://d3de1i4svbyqq" path="res://fonts/tribal-font/Tribal-WZ1Y.ttf" id="5_b7i6l"]
[ext_resource type="Script" path="res://scripts/menus/credits.gd" id="5_ilt64"]
[ext_resource type="AudioStream" uid="uid://bhr5eg54pvgyo" path="res://sounds/menu.wav" id="9_vlyim"]

[node name="Game" type="Node2D"]
script = ExtResource("1_nqmi5")

[node name="MainMenu" type="Sprite2D" parent="."]
texture = ExtResource("2_nfxcj")
centered = false

[node name="StartMenu" type="Node2D" parent="."]
script = ExtResource("2_ufbnd")

[node name="TitleScreenButtons" type="Sprite2D" parent="StartMenu"]
position = Vector2(157.5, 425)
texture = ExtResource("4_u5p1v")

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu"]
offset_left = 40.5
offset_top = 302.0
offset_right = 273.5
offset_bottom = 551.0
scale = Vector2(0.993158, 0.943608)
theme_override_constants/separation = 75

[node name="Play" type="Button" parent="StartMenu/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_b7i6l")
theme_override_font_sizes/font_size = 25
text = "Play"
flat = true

[node name="Scoreboard" type="Button" parent="StartMenu/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_b7i6l")
theme_override_font_sizes/font_size = 25
text = "Scoreboard"
flat = true

[node name="Credits" type="Button" parent="StartMenu/VBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_b7i6l")
theme_override_font_sizes/font_size = 25
text = "Credits"
flat = true

[node name="Play" type="Node2D" parent="."]
visible = false
script = ExtResource("1_2fhuk")

[node name="VBoxContainer" type="VBoxContainer" parent="Play"]
offset_left = 373.0
offset_top = 221.0
offset_right = 445.0
offset_bottom = 396.0
theme_override_constants/separation = 17

[node name="Easy" type="Button" parent="Play/VBoxContainer"]
layout_mode = 2
text = "Easy"

[node name="Medium" type="Button" parent="Play/VBoxContainer"]
layout_mode = 2
text = "Medium"

[node name="Hard" type="Button" parent="Play/VBoxContainer"]
layout_mode = 2
text = "Hard"

[node name="Return" type="Button" parent="Play/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="Scoreboard" type="Node2D" parent="."]
visible = false
script = ExtResource("3_l42sp")

[node name="Scores" type="ScrollContainer" parent="Scoreboard"]
offset_left = 325.0
offset_top = 269.0
offset_right = 611.0
offset_bottom = 529.0

[node name="VBoxContainer" type="VBoxContainer" parent="Scoreboard/Scores"]
layout_mode = 2
theme_override_constants/separation = 17

[node name="Return" type="Button" parent="Scoreboard"]
offset_left = 429.0
offset_top = 542.0
offset_right = 490.0
offset_bottom = 573.0
text = "Return"

[node name="Dificulty" type="Button" parent="Scoreboard"]
offset_left = 625.0
offset_top = 376.0
offset_right = 697.0
offset_bottom = 407.0
text = "Dificulty"

[node name="Credits" type="Node2D" parent="."]
visible = false
script = ExtResource("5_ilt64")

[node name="Return" type="Button" parent="Credits"]
text = "Return"

[node name="Win" type="Node2D" parent="."]
visible = false
script = ExtResource("2_v2wv1")

[node name="Button" type="Button" parent="Win"]
offset_left = 317.0
offset_top = 297.0
offset_right = 440.0
offset_bottom = 335.0
text = "Send"

[node name="TextEdit" type="TextEdit" parent="Win"]
offset_left = 317.0
offset_top = 140.0
offset_right = 440.0
offset_bottom = 178.0
text = "Your Name"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_vlyim")
autoplay = true

[connection signal="pressed" from="StartMenu/VBoxContainer/Play" to="StartMenu" method="_on_play_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Scoreboard" to="StartMenu" method="_on_scoreboard_pressed"]
[connection signal="pressed" from="StartMenu/VBoxContainer/Credits" to="StartMenu" method="_on_credits_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Easy" to="Play" method="_on_easy_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Medium" to="Play" method="_on_medium_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Hard" to="Play" method="_on_hard_pressed"]
[connection signal="pressed" from="Play/VBoxContainer/Return" to="Play" method="_on_return_pressed"]
[connection signal="pressed" from="Scoreboard/Return" to="Scoreboard" method="_on_return_pressed"]
[connection signal="pressed" from="Scoreboard/Dificulty" to="Scoreboard" method="change_dificulty"]
[connection signal="pressed" from="Credits/Return" to="Credits" method="_on_return_pressed"]
[connection signal="pressed" from="Win/Button" to="Win" method="_save_score_pressed"]
[connection signal="pressed" from="Win/Button" to="Win" method="_on_login_pressed"]
